--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/pruebacss.css">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    
-    <title>Document</title>
+    <title>JF5 STORE</title>
 </head>
 <body>
     <main>
@@ -19,7 +18,7 @@
               <img src="imagenes/portada1.jpg" class="d-block w-100" alt="inicio" height="750px"></img>
               <div class="carousel-caption d-md-block animate__animated animate__jackInTheBox">
                 <h1 class="tituloSecciones">Bienvenido!</h1>
-                <h5>Infórmate de las últimas novedades que tenemos para ti</h5>
+                <h4>Infórmate de las últimas novedades que tenemos para ti</h4>
               </div>
             </div>
           </div>
